--- a/style.css
+++ b/style.css
@@ -19,7 +19,11 @@ h1 {
 }
 
 #origami2{
-  background-color:lightcoral; 
+  background-color:royalblue; 
+
+}
+#origami3{
+    background-color:yellow;
 }
 
 .line {
@@ -27,4 +31,7 @@ h1 {
     background-color: #000;
     width: 70px;
     margin: 8px auto;
+}
+.line{
+width:4000000px;    
 }
